--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,9 @@ name: build
 on:
   push:
     branches:
-      - "**"
+      - "main"
+      - "feature-*"
+      - "bug-*"
     tags:
       - "v*"
 
@@ -35,6 +37,7 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1.12.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
