--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,3 +54,5 @@ jobs:
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          build-args: |
+            apiVersion=${{ github.event.release.tag_name }}
