adding edge docker image tag for image based on main branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
         uses: docker/metadata-action@v3.6.2
         with:
           images: tobiasehlert/teslamateapi
+          tags: |
+            type=edge
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}.{{minor}}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
