--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,9 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3.6.2
         with:
-          images: tobiasehlert/teslamateapi
+          images: |
+            tobiasehlert/teslamateapi
+            ghcr.io/tobiasehlert/teslamateapi
           tags: |
             type=edge
             type=semver,pattern=v{{version}}
@@ -46,6 +48,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1.12.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v2.7.0
