updating build apiVersion during build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Configure build information
+        id: build_information
+        run: |
+          if  [[ ${{ github.ref_type }} == "tag" ]]; then
+            echo "::set-output name=release_name::$( echo ${{ github.ref_name }} )"
+          else
+            echo "::set-output name=release_name::$( echo unknown )"
+          fi
+
       - name: Build and push
         uses: docker/build-push-action@v2.7.0
         with:
@@ -69,4 +78,4 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           build-args: |
-            apiVersion=${{ github.event.release.tag_name }}
+            apiVersion=${{ steps.build_information.outputs.release_name }}
