adding docker/metadata-action tag for branches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
             ghcr.io/tobiasehlert/teslamateapi
           tags: |
             type=edge
+            type=ref,event=branch
             type=semver,pattern=v{{version}}
             type=semver,pattern=v{{major}}.{{minor}}
 
