updating image inspection
rel bd75110ac05653dd03e484faf3150d3c56d759ed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,22 @@ jobs:
             apiVersion=${{ fromJSON(steps.docker_meta.outputs.json).labels['org.opencontainers.image.version'] }}
 
       - name: Inspect image
-        run: docker buildx imagetools inspect ${{ fromJson(steps.docker_meta.outputs.json).tags[0] }}@${{ steps.docker_build.outputs.digest }} --format='{{index .}}'
+        run: |
+          echo "::group::Inspecting Manifest"
+          docker buildx imagetools inspect ${{ fromJson(steps.docker_meta.outputs.json).tags[0] }}@${{ steps.docker_build.outputs.digest }} --format '{{ json .Manifest }}'
+          echo "::endgroup::"
+
+          echo "::group::Inspecting (linux/amd64) Image"
+          docker buildx imagetools inspect ${{ fromJson(steps.docker_meta.outputs.json).tags[0] }}@${{ steps.docker_build.outputs.digest }} --format '{{ json (index .Image "linux/amd64") }}
+          echo "::endgroup::"
+
+          echo "::group::Inspecting (linux/amd64) Provenance"
+          docker buildx imagetools inspect ${{ fromJson(steps.docker_meta.outputs.json).tags[0] }}@${{ steps.docker_build.outputs.digest }} --format '{{ json (index .Provenance "linux/amd64") }}
+          echo "::endgroup::"
+
+          echo "::group::Inspecting (linux/amd64) SBOM"
+          docker buildx imagetools inspect ${{ fromJson(steps.docker_meta.outputs.json).tags[0] }}@${{ steps.docker_build.outputs.digest }} --format '{{ json (index .SBOM "linux/amd64") }}
+          echo "::endgroup::"
 
   dockerhub:
     if: github.event_name == 'release'
