--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,14 +115,14 @@ jobs:
         run: |
           echo "::group::Verify signature (DockerHub)"
           cosign verify --rekor-url https://rekor.sigstore.dev \
-            --certificate-identity "https://github.com/${{ github.repository }}" \
+            --certificate-identity "https://github.com/${{ github.workflow_ref }}" \
             --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
             tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
           echo "::endgroup::"
 
           echo "::group::Verify signature (GitHub Container Registry)"
           cosign verify --rekor-url https://rekor.sigstore.dev \
-            --certificate-identity "https://github.com/${{ github.repository }}" \
+            --certificate-identity "https://github.com/${{ github.workflow_ref }}" \
             --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
             ghcr.io/tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
           echo "::endgroup::"
