--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,8 @@ jobs:
         uses: docker/metadata-action@c1e51972afc2121e065aed6d45c65596fe445f3f #v5.8.0
         with:
           images: |
-            tobiasehlert/teslamateapi
-            ghcr.io/tobiasehlert/teslamateapi
+            ${{ github.repository_owner }}/${{ github.event.repository.name }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
           tags: |
             type=edge
             type=ref,event=branch,enable=${{ (github.ref != 'refs/heads/main') }}
@@ -86,10 +86,10 @@ jobs:
         if: github.ref == 'refs/heads/main' || github.event_name == 'release'
         run: |
           cosign sign --yes --recursive \
-            tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
+            ${{ github.repository_owner }}/${{ github.event.repository.name }}@${{ steps.docker_build.outputs.digest }}
 
           cosign sign --yes --recursive \
-            ghcr.io/tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}@${{ steps.docker_build.outputs.digest }}
 
       - name: Inspect image
         if: github.ref == 'refs/heads/main' || github.event_name == 'release'
@@ -117,14 +117,14 @@ jobs:
           cosign verify --rekor-url https://rekor.sigstore.dev \
             --certificate-identity "https://github.com/${{ github.workflow_ref }}" \
             --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
-            tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
+            ${{ github.repository_owner }}/${{ github.event.repository.name }}@${{ steps.docker_build.outputs.digest }}
           echo "::endgroup::"
 
           echo "::group::Verify signature (GitHub Container Registry)"
           cosign verify --rekor-url https://rekor.sigstore.dev \
             --certificate-identity "https://github.com/${{ github.workflow_ref }}" \
             --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
-            ghcr.io/tobiasehlert/teslamateapi@${{ steps.docker_build.outputs.digest }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}@${{ steps.docker_build.outputs.digest }}
           echo "::endgroup::"
 
   dockerhub:
